# perso-auto-tester

./: .dockerignore  Dockerfile  README.md  pyproject.toml
api/: main.py
api/routers/: pages.py  test.py
docs/: REALTIME_BROWSER_VIEWING.md
tasks/: test_login.py  test_translate.py  test_upload.py
utils/: __init__.py  config.py  logger.py  login.py  popup_handler.py  verification.py
