[project]
name = "perso-auto-tester"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "griotold", email = "gotjd9773@naver.com"},
]
dependencies = ["fastapi>=0.128.0", "uvicorn[standard]>=0.40.0", "python-dotenv>=1.2.1", "playwright>=1.57.0", "python-multipart>=0.0.21"]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}

[tool.pdm]
distribution = false

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "httpx>=0.28.1",
]

[tool.pdm.scripts]
dev = "uvicorn api.main:app --reload --host 0.0.0.0 --port 8000"
start = "uvicorn api.main:app --host 0.0.0.0 --port 8080"
test_login = {env = {HEADLESS = "false"}, cmd = "python tasks/test_login.py"}
test_upload = {env = {HEADLESS = "false"}, cmd = "python tasks/test_upload.py"}

